# claude-permissions-pro

./: .gitignore  CLAUDE.md  README.md  config.toml  pyproject.toml
.claude-plugin/: plugin.json
.claude/skills/confusion/: SKILL.md
hooks/: hooks.json  pretooluse.py
skills/less-permission-prompts/: SKILL.md
src/claude_permissions_pro/: __init__.py  cli.py  confusion_matrix.py  generate_tests.py  history.py  hook.py  judge.py  logger.py  matcher.py  shell_parser.py
tests/: test_confusion_matrix.py  test_judge.py  test_logger.py  test_matcher.py  test_shell_parser.py
